--- a/src/pages/PowerBetContest/PowerBetContest.scss
+++ b/src/pages/PowerBetContest/PowerBetContest.scss
@@ -29,6 +29,7 @@
         background-color: #17181a;
         border-radius: 11px;
         max-height: 600px;
+        margin-bottom: 9em;
     }
     .__winner-prize{
         font-size: 28px;
