design-the-select-teams-page

--- a/src/components/ContestRules/ContestRules.scss
+++ b/src/components/ContestRules/ContestRules.scss
@@ -3,6 +3,7 @@
 .__ContestRules{
     border-radius: 9px;
     background: #17181a url('../../assets/group-46.png') no-repeat right bottom;
+    margin: 2em;
     .__image-wrapper{
         z-index: 2;
         top: -2.6em;
