--- a/src/components/Contest/Contest.scss
+++ b/src/components/Contest/Contest.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors.scss';
 
 .__contest{
-    margin: 1.6em 0 1.6em 1.6em;
+    margin: 1.8em 0 1.8em 1.8em;
     .__main{
         box-shadow: 0 4px 8px 0 rgba(4, 4, 4, 0.4);
         border-radius: 5px;
@@ -26,6 +26,7 @@
         &:nth-child(2){
             background: linear-gradient(to left, rgba(242, 242, 242, 0.8), #f2f2f2 0%);
             color: #202124;
+            border: 1px solid #f2f2f2;
         }
         &:nth-child(3){
             background: linear-gradient(to left, #fa3800, #fb6e00 0%);
@@ -63,7 +64,7 @@
         }
     }
     .__contest-footer{
-        border-top: 1px solid #000;
+        border-top: 2px solid #000;
         padding: 0.5em;
     }
     .__vs{
@@ -73,9 +74,4 @@
         font-family: Teko;
         text-shadow: 0 2px 6px rgba(4, 4, 4, 0.5);
     }
-}
-
-.VS {
-    text-shadow: none;
-    font-size: 32px;
 }
