--- a/src/pages/PowerCenter/PowerCenter.scss
+++ b/src/pages/PowerCenter/PowerCenter.scss
@@ -50,7 +50,7 @@
         }
         .__btn{
             width: 13em;
-            color: #111111;
+            color: $black;
         }
         a{
             &:not(.active) .__btn{
