--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,14 +18,19 @@ body{
     background-color: #202124;
 }
 .__h2, .__h3, .__h4, .__h5{
-    line-height: 1.2em;
     font-weight: 500;
+}
+.__small-line-height{
+    line-height: 1.2em;
 }
 .__h2{
     font-size: 2.85em;
 }
 .__h3{
     font-size: 30px;
+}
+.__h3s{
+    font-size: 28px;
 }
 .__h4{
     font-size: 24px;
@@ -60,6 +65,6 @@ body{
 .__default-font-size{
     font-size: 14px;
 }
-.__defail-font-weight{
+.__defaul-font-weight{
     font-weight: 400;
 }
