start-designing-powerbet-live

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,11 +8,10 @@ svg{
     height: 1.3em;
 }
 .__btn{
-    padding: 0.55em 1.75em;
+    padding: 0.55em 1em;
     @extend .__primary;
     border-radius: 6px;
     cursor: pointer;
-    text-transform: uppercase;
     font-weight: 500;
     color: #fff;
     text-align: center;
@@ -20,6 +19,7 @@ svg{
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    min-width: 9em;
     &.__style-2{
         background: transparent;
         border-color: currentColor;
@@ -182,6 +182,7 @@ label{
         }
     }
 }
+
 .__outline-badge{
     padding: 0.532em 0.69em;
     border: 2px solid;
