--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,11 +2,11 @@
 
 .__Header{
     background: $black;
-    width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 2;
+    width: 100%;
     .__brand-logo > img{
         width: 7.142em;
     }
