--- a/src/pages/PowerCenter/table.scss
+++ b/src/pages/PowerCenter/table.scss
@@ -3,9 +3,12 @@
 .__table-wrapper{
     .__badges-wrapper{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(5, 1fr);
         grid-gap: 1em;
         overflow: auto;
+        &.__live-power-play-badges-wrapper{
+            grid-template-columns: repeat(4, 1fr);
+        }
         .__outline-badge{
             padding: 0.69em 2.13em;
             @media (max-width: 1050px) {
@@ -17,12 +20,17 @@
         }
     }
     .__power-center-scrollbar{
-        max-height: 400px;
+        max-height: 600px;
         .__table{
+            border-radius: 4px;
+            overflow: hidden;
             display: grid;
             grid-template-columns: auto auto auto auto auto;
             grid-auto-rows: 1fr;
-            @media (max-width: 1200px) {
+        }
+        @media (max-width: 1200px) {
+            max-height: initial;
+            .__table{
                 grid-template-columns: 1fr;
                 grid-row-gap: 1em;
             }
