--- a/src/pages/PowerCenter/PowerCenter.scss
+++ b/src/pages/PowerCenter/PowerCenter.scss
@@ -47,6 +47,7 @@
 @media (max-width: 899px){
     .__PowerCenter{
         .__power-center-links{
+            margin: 5em 1em;
             justify-content: space-around;
             a{
                 font-size: 20px;
