made-the-home-page-responsive

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
-@import './colors.scss', './flex.scss', './layouts.scss', './styles.scss', './responsive.scss';
+@import './colors.scss', './flex.scss', './layouts.scss', './styles.scss';
 
 *{
     box-sizing: border-box;
@@ -71,3 +71,5 @@ body{
 .__text-in-one-line{
     white-space: nowrap;
 }
+
+@import './responsive.scss';
