--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,8 +1,9 @@
 @import '../../scss/colors.scss';
 
 .__HomePage{
+    overflow-y: hidden;
     .__viewport-1{
-        background-image: url('../../assets/HomePageViewPortImage.jpg');
+        background: url('../../assets/HomePageViewPortImage.jpg') top center;
     }
     .__viewport-subtitle{
         max-width: 28em;
@@ -15,6 +16,7 @@
     }
     .__background-2{
         background-image: url('../../assets/HomePageViewPortImage (02).jpg');
+        background-position: bottom right;
     }
     .__background-3{
         background-image: url('../../assets/HomePageViewPortImage (03).jpg');
@@ -54,6 +56,7 @@
     }
     .__background-5{
         background-image: url('../../assets/HomePageViewPortImage (06).png');
+        background-position: top right;
     }
     .__background-5-main{
         max-width: 37em;
@@ -61,5 +64,106 @@
     .__powerplay-large-icon{
         right: 0;
         top: 8em
+    }
+}
+
+@media (max-width: 1023px){
+    .__HomePage{
+        .__viewport-title{
+            background: transparent;
+        }
+        .__internation-patent-pending{
+            text-align: center;
+        }
+        .__main{
+            width: initial;
+            .__explore-games{
+                display: inline-block;
+            }
+        }
+        .__explore-games{
+            color: #f2f2f2;
+        }
+        .__power-up-btn{
+            margin-top: 1em !important;
+        }
+        .__instructions-step{
+            margin: 1em 0 4em 0 !important;
+            >div{
+                padding-left: 2.4em;
+                margin-right: 40%;
+                &::before{
+                    width: 1.7em;
+                    height: 1.7em;
+                    font-size: 1em;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 800px){
+    .__HomePage{
+        .__background-3, .__background-4, .__background-5{
+            background-size: cover 100%;
+        }
+        .__background-2{
+            background-image: url('../../assets/group-7@2x.jpg');
+            background-position: bottom center;
+            .__power-up-btn{
+                margin-bottom: 2em !important;
+            }
+            .__explore-games{
+                margin-top: 2em;
+            }
+        }
+        .__background-3{
+            background-image: url('../../assets/group-7-copy@2x.jpg');
+            background-position: center right;
+        } 
+        .__background-4{
+            background-image: url('../../assets/group-9@2x.jpg');
+            background-position: bottom right;
+            .__socket-ball-boy-image{
+                background: none;
+            }
+            .__bold{
+                font-weight: 500;
+            }
+            .__title{
+                color: $primary;
+            }
+            .__power-up-btn{
+                margin-top: 3em !important;
+            }
+        }
+        .__background-5-main{
+            max-width: initial;
+        }
+        .__background-5{
+            .__powerplay-large-icon{
+                width: 8em;
+                position: relative;
+                right: -3em;
+                top: -1em;
+            }
+        }
+    }
+}
+@media (max-width: 600px){
+    .__HomePage{
+        .__background-4{
+            .__instructions-step{
+                >div{
+                    margin-right: 0;
+                    &:nth-child(3){
+                        margin-right: 20vw;
+                    }
+                    &:nth-child(4){
+                        margin-right: 50%;
+                    }
+                }
+            }
+        }
     }
 }
