--- a/src/scss/layouts.scss
+++ b/src/scss/layouts.scss
@@ -31,7 +31,7 @@
 }
 .__viewport{
     min-height: 100vh;
-    @extend .__column, .__background;
+    @extend .__column;
 }
 .__viewport-large-title{
     font-size: 80px;
