--- a/src/pages/BingoPreGame/TimerClock.scss
+++ b/src/pages/BingoPreGame/TimerClock.scss
@@ -1,7 +1,7 @@
 .__TimerClock{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 0 1em;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 0 0.6em;
     .__primary-color{
         background: #000;
         width: 1.6em;
@@ -12,5 +12,6 @@
     }
     .__label{
         font-size: 12px;
+        color: rgba($color: #f2f2f2, $alpha: 0.7);
     }
 }
