Card game page without sidebar

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,4 +1,13 @@
 $primary: #fb6e00;
 $black: #111111;
 $lightBlack: #202124;
+$lightBlack2: #3b3c3e;
+$black2: #17181a;
 $white: #fff;
+$grey: #979797;
+$lightGreen: #1bbc8633;
+$alertPrimary: #fb6e0026;
+$alertSuccess: #1bbc8626;
+$alertDanger: #e7304e26;
+$danger: #e7304e;
+$success: #1bbc86;
