Card game page pc version

--- a/src/components/PageHeaderCard/pageHeaderCard.scss
+++ b/src/components/PageHeaderCard/pageHeaderCard.scss
@@ -55,16 +55,27 @@
   .__card_body_right {
     margin: 0 0 0 20px;
 
+    .__card_body_right_bottom {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 20px 0 0 0;
+      flex: 1;
+    }
+
     span {
       background-color: $lightGreen;
       height: 32px;
       margin: 0 0 16px 0;
-      padding: 3px 14px 4px 23px;
+      padding: 3px 28px;
       border-radius: 4px;
     }
 
     p {
       margin-top: 12px;
+      text-align: justify;
+      margin: 0;
+      padding: 0;
     }
   }
 }
