--- a/src/components/GameCard/gameCard.scss
+++ b/src/components/GameCard/gameCard.scss
@@ -1,11 +1,53 @@
 @import "../../scss/colors.scss";
 
-.__game_card_container {
-  width: 122px;
-  height: 187px;
-  border-radius: 12px;
-  border: dashed 1px $grey;
-  justify-content: center;
-  align-items: center;
+.__game_card_wrapper {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 187px;
+  width: 122px;
+
+  .__game_card_container {
+    display: flex;
+    flex: 1;
+    border-radius: 12px;
+    border: dashed 1px $grey;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .__game_card_popup_container {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    align-self: center;
+    padding: 0;
+    margin-top: 187px;
+    border-width: 0;
+  }
+
+  .__game_card_popup {
+    display: flex;
+    background-color: $lightBlack2;
+    padding: 0.4rem;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    margin: 0;
+    border: none;
+    width: 220px;
+
+    .__btn__ {
+      display: flex;
+      border-radius: 100px;
+      padding: 0;
+      background: none;
+      border: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
