--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -2,12 +2,67 @@
 
 .__sidebar_container {
   position: absolute;
+  flex: 1;
   width: 20%;
+  height: 100%;
   right: 0;
-  top: 50px;
   flex-direction: column;
   background-color: $lightBlack;
   box-shadow: -4px 0 38px 0 rgba(4, 4, 4, 0.58);
   margin: 0;
   padding: 1rem;
+
+  .__sidebar_container_2 {
+    position: relative;
+    display: flex;
+    height: 90%;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 0;
+
+    .__sidebar_header {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .__sidebar_header_title {
+        font-size: 24px;
+        margin: 10px 0;
+      }
+
+      .__sidebar_header_balance {
+        display: flex;
+        flex-direction: row;
+        background-color: $primaryLight;
+        padding: 8px 25px;
+        border: none;
+        border-radius: 30px;
+
+        .__sidebar_balance_text {
+          color: $primary;
+          font-weight: bold;
+          margin: 0 0 0 5px;
+          letter-spacing: normal;
+        }
+      }
+    }
+
+    .__sidebar_button_wrapper {
+      margin: 30px 0 0 0;
+      display: flex;
+      flex: 0.7;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 5px 0;
+
+      .__sidebar_reload_btn {
+        display: "flex";
+        height: 48px;
+        background-color: $primary;
+        border-radius: 80px;
+      }
+    }
+  }
 }
